state and stateless example

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FirstAppInCompose</string>
     <string name="txt_welcome_to_our_course">welcome to our course Hi iam vipin tyagi iam from india and i have enjoy to much  and this is very great to here and i have enjoy to much in the marr </string>
+    <string name="txt_src">Hi vipin from this side</string>
 </resources>
